fix: remove scale transform from theme/language on mobile

--- a/components/LanguageChanger.module.css
+++ b/components/LanguageChanger.module.css
@@ -57,8 +57,6 @@
 
 @media (max-width: 700px) {
   .tabs {
-    transform: scale(1.15);
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin-top: 0.25rem;
   }
 }
